## https://doc.rust-lang.org/cargo/reference/manifest.html

[package]

name = "s3d"
version = "0.0.1-alpha.5"
authors = ["guymguym"]
edition = "2021"
description = "s3d is a daemon for data access using S3 API. A modern cousin of nfsd, ftpd, httpd, etc. It is designed to be simple, tiny, blazing fast, and portable in order to fit in a variety of environments from developer machines, containers, kubernetes, edge devices, etc."
homepage = "https://s3d.rs"
repository = "https://github.com/s3d-rs/s3d"
license = "Apache-2.0"
keywords = ["s3", "edge", "object", "storage", "bucket"]
categories = ["database-implementations", "filesystem", "web-programming::http-server"]

[badges]

maintenance = { status = "experimental" }

[profile.dev]

# When running in development we want to abort on panic
# to make it easier to debug. Use `export RUST_BACKTRACE=1` to print stack traces.
panic = 'abort'

[build-dependencies]

quote = "1.0.15"
proc-macro2 = "1.0.36"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"

[dependencies]

## Runtime crates

hyper = { version = "0.14.16", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
#fuser = "0.10.0"
libc = "0.2.114"
log = "0.4.14"
env_logger = "0.9.0"

## Rust related crates

paste = "1.0.6"
quote = "1.0.15"
anyhow = "1.0.53"
async-trait = "0.1.52"
proc-macro2 = "1.0.36"

## General purpose crates

bytes = "1.1.0"
base64 = "0.13.0"
chrono = "0.4.19"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "3.0.12", features = ["derive"] }

## Encoding/decoding crates

serde = { version = "1.0.135", features = ["derive"] }
serde_yaml = "0.8.23"
envy = "0.4.2"
#serde_json = "1.0.78"
#quick-xml = "0.22.0" # seems to be more popular than other serde_xml* crates

## smithy-rs crates (git submodule)

aws-smithy-client = { path = "smithy-rs/rust-runtime/aws-smithy-client", features = ["client-hyper"] }
aws-smithy-types = { path = "smithy-rs/rust-runtime/aws-smithy-types" }
aws-smithy-xml = { path = "smithy-rs/rust-runtime/aws-smithy-xml" }
aws-smithy-http = { path = "smithy-rs/rust-runtime/aws-smithy-http" }
aws-smithy-http-tower = { path = "smithy-rs/rust-runtime/aws-smithy-http-tower" }
aws-smithy-http-server = { path = "smithy-rs/rust-runtime/aws-smithy-http-server" }

aws-http = { path = "smithy-rs/aws/rust-runtime/aws-http" }
aws-types = { path = "smithy-rs/aws/rust-runtime/aws-types" }
aws-sigv4 = { path = "smithy-rs/aws/rust-runtime/aws-sigv4" }
aws-sig-auth = { path = "smithy-rs/aws/rust-runtime/aws-sig-auth" }
aws-endpoint = { path = "smithy-rs/aws/rust-runtime/aws-endpoint" }

#aws-config = { path = "smithy-rs/aws/rust-runtime/aws-config" }
#aws-config = "0.5.2"

codegen-server-s3 = { path = "codegen/codegen-server-s3" }
codegen-client-s3 = { path = "codegen/codegen-client-s3" }
