## https://doc.rust-lang.org/cargo/reference/manifest.html

[package]

name = "s3d"
version = "0.0.1-alpha.5"
authors = ["guymguym"]
edition = "2021"
description = "s3d is a daemon for data access using S3 API. A modern cousin of nfsd, ftpd, httpd, etc. It is designed to be simple, tiny, blazing fast, and portable in order to fit in a variety of environments from developer machines, containers, kubernetes, edge devices, etc."
homepage = "https://s3d.rs"
repository = "https://github.com/s3d-rs/s3d"
license = "Apache-2.0"
keywords = ["s3", "edge", "object", "storage", "bucket"]
categories = ["database-implementations", "filesystem", "web-programming::http-server"]

[features]

# enable features by default
default = ["fuse"]
# The fuse feature requires `sudo apt-get install -y fuse libfuse-dev pkg-config` or equivalent
# when enabled it requires the optional dependency on crate `fuser`.
fuse = ["fuser"]

[badges]

maintenance = { status = "experimental" }

[profile.dev]

# When running in development we want to abort on panic
# to make it easier to debug. Use `export RUST_BACKTRACE=1` to print stack traces.
panic = 'abort'

[build-dependencies]

quote = "1.0.15"
proc-macro2 = "1.0.36"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"

[dependencies]

## Runtime crates

hyper = { version = "0.14.17", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
libc = "0.2.119"
log = "0.4.14"
env_logger = "0.9.0"

## Rust related crates

paste = "1.0.6"
quote = "1.0.15"
anyhow = "1.0.56"
async-trait = "0.1.52"
proc-macro2 = "1.0.36"
lazy_static = "1.4.0"

## General purpose crates

bytes = "1.1.0"
base64 = "0.13.0"
chrono = "0.4.19"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "3.1.6", features = ["derive", "cargo"] }

## Encoding/decoding crates

serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
envy = "0.4.2"
#serde_json = "1.0.78"
#quick-xml = "0.22.0" # seems to be more popular than other serde_xml* crates

## Optional features crates

fuser = { version = "0.11.0", optional = true }

## aws smithy crates

aws-smithy-client = { version = "0.38.0", features = ["client-hyper"] }
aws-smithy-async = { version = "0.38.0", features = ["rt-tokio"] }
aws-smithy-types = "0.38.0"
aws-smithy-xml = "0.38.0"
aws-smithy-http = "0.38.0"
aws-smithy-http-tower = "0.38.0"
aws-smithy-http-server = "0.38.0"
aws-http = "0.8.0"
aws-types = "0.8.0"
aws-sigv4 = "0.8.0"
aws-sig-auth = "0.8.0"
aws-endpoint = "0.8.0"
aws-config = "0.8.0"
aws-sdk-s3 = "0.8.0"
s3d-smithy-codegen-server-s3 = "0.0.1"

## patching to use local overides of the smithy-rs crates
## can also be added in another file `.cargo/config.toml`
## see https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html

[patch.crates-io]

aws-smithy-client = { path = "smithy-rs/s3d/build/crates/aws-smithy-client" }
aws-smithy-async = { path = "smithy-rs/s3d/build/crates/aws-smithy-async" }
aws-smithy-types = { path = "smithy-rs/s3d/build/crates/aws-smithy-types" }
aws-smithy-xml = { path = "smithy-rs/s3d/build/crates/aws-smithy-xml" }
aws-smithy-http = { path = "smithy-rs/s3d/build/crates/aws-smithy-http" }
aws-smithy-http-tower = { path = "smithy-rs/s3d/build/crates/aws-smithy-http-tower" }
aws-smithy-http-server = { path = "smithy-rs/s3d/build/crates/aws-smithy-http-server" }
aws-http = { path = "smithy-rs/s3d/build/crates/aws-http" }
aws-types = { path = "smithy-rs/s3d/build/crates/aws-types" }
aws-sigv4 = { path = "smithy-rs/s3d/build/crates/aws-sigv4" }
aws-sig-auth = { path = "smithy-rs/s3d/build/crates/aws-sig-auth" }
aws-endpoint = { path = "smithy-rs/s3d/build/crates/aws-endpoint" }
aws-config = { path = "smithy-rs/s3d/build/crates/aws-config" }
aws-sdk-s3 = { path = "smithy-rs/s3d/build/crates/s3" }
s3d-smithy-codegen-server-s3 = { path = "smithy-rs/s3d/build/crates/s3d-smithy-codegen-server-s3" }
